Z-index and alignment fix

--- a/src/components/Project/project.css
+++ b/src/components/Project/project.css
@@ -25,6 +25,7 @@
     justify-content: center;
     gap: 32px;
     position: relative;
+    z-index: 2;
 }
 
 .project-heading-wrapper-right{
@@ -34,6 +35,7 @@
     justify-content: center;
     gap: 32px;
     position: relative;
+    z-index: 2;
 }
 
 .project-heading-left{
@@ -41,7 +43,9 @@
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    gap:8px
+    gap:8px;
+    position: relative;
+    z-index: 2;
 }
 
 .project-heading-right{
@@ -49,7 +53,9 @@
     flex-direction: column;
     align-items: flex-end;
     justify-content: center;
-    gap:8px
+    gap:8px;
+    position: relative;
+    z-index: 2;
 }
 
 .project-main-heading{
@@ -78,6 +84,8 @@
     text-align: start;
     color: darkgray;
     margin: 0;
+    position: relative;
+    z-index: 2;
 }
 
 .project-text-right{
@@ -88,6 +96,8 @@
     text-align: end;
     color: darkgray;
     margin: 0;
+    position: relative;
+    z-index: 2;
 }
 
 .project-image{
@@ -148,6 +158,7 @@
     color: white;
     border: 1px black solid;
 }
+
 
 @media screen and (max-width: 1000px) {
 
